--- a/main.html
+++ b/main.html
@@ -19,7 +19,8 @@ background-size: cover;
 height: 100%">
 <div id="upJumper" style="display: none">
     <div class="fixed-top d-flex align-items-center" style="height: 100%;width: 100%;background-color : rgba(180,180,180,0.8)" >
-        <img id="gifable" src="pecazas.gif" style="height: 60%;width: auto;margin:0 auto" />
+        <img id="gifable" style="height: 60%;width: auto;margin:0 auto" />
+        <p id="gifText" style="width: 100%;text-align: center;margin:0 auto;font-size: 4em;position: fixed;bottom:20%"></p>
     </div>
 </div>
     <main class="d-flex align-items-center" style=" font-family: 'Akaya Telivigala'; opacity: 0.9; height: 100%; font-size: 3em;">
@@ -75,7 +76,10 @@ height: 100%">
                     <div class="card-header" style="text-align: center;">Tanulás</div>
                     <div class="card-body">
                         <p class="card-text">Válaszd ki mit szeretnél tanulni, de gondold át, hiszen minél a hosszabb ideig tanulsz, annál több tudást szerezhetsz.</p>
+                        <div style="text-align: center; padding-right: 1%;margin:0 auto">
                         <input type="button" id="fishing" class="btn btn-primary" style="font-size: 1em" onclick="learnSet(1)" value="Pecázás"></input>
+                        <p>1kör -> 1tp</p>
+                        </div>
                         <input type="button" id="pottery" class="btn btn-primary" style="font-size: 1em" onclick="learnSet(2)" value="Agyagozás"></input>
                         <input type="button" id="language" class="btn btn-primary" style="font-size: 1em" onclick="learnSet(3)" value="Nyelv tanulás"></input>
                         <input type="button" id="okj" class="btn btn-primary" style="font-size: 1em" onclick="learnSet(8)" value="Szakma tanulása"></input>
@@ -88,30 +92,30 @@ height: 100%">
                     <div class="card-body">
                         <p class="card-text">Üdvözlünk a boltban! Alább látod miket vásárolhatsz.</p>
                     <div class="row d-flex align-items-center">
-                        <div style="padding-right: 1%;margin:0 auto" >
+                        <div style="text-align: center; padding-right: 1%;margin:0 auto" >
                             <input type="image" src="icon/medicine.svg" id="medicine" class="btn" style="height: 100px;width: auto" onclick="buy(products.medicine)"></input>
                             <p id="medicinePrice"></p>
                         </div>
 
-                        <div style="padding-right: 1%;margin:0 auto" >
+                        <div style="text-align: center; padding-right: 1%;margin:0 auto" >
                             <input type="image" src="icon/chocolate-bar.svg" id="chocolate" class="btn" style="height: 100px;width: auto" onclick="buy(products.chocolate)"></input>
                             <p id="chocolatePrice"></p>
                         </div>
 
-                        <div style="padding-right: 1%;margin:0 auto" >
+                        <div  style="text-align: center; text-align: center; padding-right: 1%;margin:0 auto" >
                             <input type="image" src="icon/cinema.svg" id="cinema" class="btn" style="height: 100px;width: auto" onclick="buy(products.cinema)"></input>
                             <p id="cinemaPrice"></p>
                         </div>
-                        <div style="padding-right: 1%;margin:0 auto" >
+                        <div style="text-align: center; padding-right: 1%;margin:0 auto" >
                             <input type="image" src="icon/game-console.svg" videogame" class="btn" style="height: 100px;width: auto" onclick="buy(products.videogame)"></input>
                             <p id="videogamePrice"></p>
                         </div>
 
-                        <div style="padding-right: 1%;margin:0 auto" >
+                        <div style="text-align: center; padding-right: 1%;margin:0 auto" >
                             <input type="image" src="icon/bicycle.svg" id="bike" class="btn" style="height: 100px;width: auto" onclick="buy(products.bike)"></input>
                             <p id="bikePrice"></p>
                         </div>
-                        <div style="padding-right: 1%;margin:0 auto" >
+                        <div style="text-align: center; padding-right: 1%;margin:0 auto" >
                             <input type="image" src="icon/sunbed.svg" id="holiday" class="btn" style="height: 100px;width: auto" onclick="buy(products.holiday)"></input>
                             <p id="holidayPrice"></p>
                         </div>
